5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1801_2575.log
== TEST (2019-06-09 18:25:44) 
-- CODE:
from numpy import*
v1=array(eval(input().upper())).
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
File "XXXX", line 2
    v1=array(eval(input().upper())).
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:26:23) 
-- CODE:
from numpy import*
v1=array(eval(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:27:22) 
-- CODE:
from numpy import*
v1=array(eval(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:27:33) 
-- CODE:
from numpy import*
v1=array(eval(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:28:01) 
-- CODE:
from numpy import*
v1=array(eval(input(str()))).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:28:35) 
-- CODE:
from numpy import*
v1=array(eval(input()).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- EXECUTION TIME:
0.799594
-- ERROR:
  File "/home/codebench/codes/1801/2575/main.py", line 3
    v2=zeros(3,dtype=int)
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:28:41) 
-- CODE:
from numpy import*
v1=array(eval(input()).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
File "XXXX", line 3
    v2=zeros(3,dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:28:58) 
-- CODE:
from numpy import*
v1=array(eval(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:29:21) 
-- CODE:
from numpy import*
v1=array(eval(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- EXECUTION TIME:
1.10017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1801/2575/main.py", line 2, in <module>
    v1=array(eval(input())).upper()
AttributeError: 'numpy.ndarray' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:29:29) 
-- CODE:
from numpy import*
v1=array(eval(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- EXECUTION TIME:
1.04755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1801/2575/main.py", line 2, in <module>
    v1=array(eval(input())).upper()
AttributeError: 'numpy.ndarray' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:29:33) 
-- CODE:
from numpy import*
v1=array(eval(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:30:42) 
-- CODE:
from numpy import*
v1=array(eval(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:31:43) 
-- CODE:
from numpy import*
v1=array(eval(input(str()))).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:31:52) 
-- CODE:
from numpy import*
v1=array(eval(input(str()))).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- EXECUTION TIME:
1.09347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1801/2575/main.py", line 2, in <module>
    v1=array(eval(input(str()))).upper()
AttributeError: 'numpy.ndarray' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:31:54) 
-- CODE:
from numpy import*
v1=array(eval(input(str()))).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:35:06) 
-- CODE:
from numpy import*
v1=array(dir(input())).upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:35:29) 
-- CODE:
from numpy import*
v1=array(dir(input().upper))
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:35:52) 
-- CODE:
from numpy import*
v1=array(dir(input().upper))
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:41:02) 
-- CODE:
from numpy import*
v1=input().upper()
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:42:02) 
-- CODE:
from numpy import*
v1=array(eval(input().upper()))
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:42:30) 
-- CODE:
from numpy import*
v1=array(eval(input().upper()))
v2=zeros(3,dtype=int)
for i in range(size(v1)):
	if(v1[i]=="TV"):
		v2[0]=v2[0]+1
	if(v1[i]=="NETFLIX"):
		v2[1]=v2[1]+1
	if(v1[i]=="YOUTUBE"):
		v2[2]=v2[2]+1
print(v2)
	
-- EXECUTION TIME:
1.1437
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 1 1]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
